# space-ros-demos

inginuity/: CMakeLists.txt  Readme.md  package.xml
inginuity/config/: inginuity_control.yaml
inginuity/launch/: inginuity.launch.py
inginuity/src/: propellors.py
inginuity/worlds/: mars_inginuity.world  mars_inginuty.world
